--- a/populares.css
+++ b/populares.css
@@ -2,6 +2,7 @@ header{
     background-image: url(img/city.gif);
     background-size: 90%;
 }
+
 body{
     font-family: 'Open Sans', sans-serif;
     background-color: #ffffff;
@@ -9,21 +10,97 @@ body{
 p{
     font-family: 'Open Sans', sans-serif;
 }
+
+.card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    padding: 20px;
+    width: 450px;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border-radius: 6px;
+
+}
+
+.comment-box {
+    padding: 5px
+}
+
+.comment-area textarea {
+    resize: none;
+    border: 1px solid #ad9f9f
+}
+
+.form-control:focus {
+    color: #495057;
+    background-color: #fff;
+    border-color: #ffffff;
+    outline: 0;
+    box-shadow: 0 0 0 1px rgb(255, 0, 0) !important
+}
+
+.send {
+    color: #fff;
+    background-color: #ff0000;
+    border-color: #ff0000
+}
+
+.send:hover {
+    color: #fff;
+    background-color: #f50202;
+    border-color: #f50202
+}
+
+.rating {
+    display: flex;
+    margin-top: -10px;
+    flex-direction: row-reverse;
+    margin-left: -4px;
+    float: left
+}
+
+.rating>input {
+    display: none
+}
+
+.rating>label {
+    position: relative;
+    width: 19px;
+    font-size: 25px;
+    color: #ff0000;
+    cursor: pointer
+}
+
+.rating>label::before {
+    content: "\2605";
+    position: absolute;
+    opacity: 0
+}
+
+.rating>label:hover:before,
+.rating>label:hover~label:before {
+    opacity: 1 !important
+}
+
+.rating>input:checked~label:before {
+    opacity: 1
+}
+
+.rating:hover>input:checked~label:before {
+    opacity: 0.4
+}
+
 #menu{
     background-color: rgb(255, 255, 255);
     font-family: 'Open Sans', sans-serif;
 }
 h1{
     text-align: center;
-    padding: 0px;
+    padding: 5%;
     margin: 0%;
-}
-
-
-.texto1{
-    padding-right: 10%;
-    float: right;
-
 }
 .btn-primary{
     color: rgb(255, 255, 255);
@@ -34,69 +111,15 @@ h1{
     margin: 0%;
     font-family: 'Open Sans', sans-serif;
 }
-#texto1 {text-align: center;
-margin: 5%;
-color: rgb(0, 0, 0);
-font-family: 'Open Sans', sans-serif;
+#texto1 {
+    text-align: left;
+    color: rgb(0, 0, 0);
+    font-family: 'Open Sans', sans-serif;
+}
+.img{
+    align-items: center;
 }
 h1{padding: 5%;
 color: aliceblue;
 font-family: 'Open Sans', sans-serif;
-}
-.redes{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    display: flex;
-    height: 30vh;
-    align-items: center;
-    justify-content: center;
-}
-.redes ul li{
-    display: inline-block;
-    margin: 0 5px;
-    width: 50px;
-    height: 50px;
-    text-align: center;
-}
-.redes ul li a{
-display: block;
-padding: 0 10px;
-background: rgb(0, 0, 0);
-color: white;
-line-height: 50px;
-font-size: 18px;
-box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, .2);
-transition: .2s;
-}
-.redes ul:hover a{
-    filter: blur(2px);
-}
-.redes ul li a:hover{
-    transform: translateY(-3px) scale(1.05);
-    box-shadow: 0 5px 5px 0px rgba(0, 0, 0, .4);
-    filter: none;
-}
-.redes ul li .facebook:hover{
-    background-color: #3b5998;
-}
-.redes ul li .youtube:hover{
-    background-color: #c4302b;
-}
-.redes ul li .instagram:hover{
-    background-color: #833AB4;
-}
-.redes ul li .whatsapp:hover{
-    background-color: #128C7E;
-}
-.redes ul li .twitter:hover{
-    background-color: #00acee;
-}
-.redes ul li .pinterest:hover{
-    background-color: #E60023;
-}
-footer{
-    color: rgb(0, 0, 0);
-    padding: 5%;
-    margin: 5%;
 }
