--- a/login.css
+++ b/login.css
@@ -1,83 +1,41 @@
+header{
+    background-image: url(img/city.gif);
+    background-size: 90%;
+}
+body{
+    font-family: 'Open Sans', sans-serif;
+    background-color: #ffffff;
+}
+p{
+    font-family: 'Open Sans', sans-serif;
+}
+#menu{
+    background-color: rgb(255, 255, 255);
+    font-family: 'Open Sans', sans-serif;
+}
+h1{
+    text-align: center;
+    padding: 5%;
+    margin: 0%;
+}
+.btn-primary{
+    color: rgb(255, 255, 255);
+    background-color: blueviolet;
+}
 .row{
     padding: 1%;
     margin: 0%;
     font-family: 'Open Sans', sans-serif;
 }
-
-body{
-    margin: 5px;
-    padding: 5px;
-    background: url(img/fondo.jpg);
-    background-size: cover;
-    background-position: center;
-    font-family: Arial, Helvetica, sans-serif;
+#texto1 {text-align: center;
+margin: 5%;
+color: rgb(0, 0, 0);
+font-family: 'Open Sans', sans-serif;
 }
-
-.loginbox {
-    width: 500px;
-    background-color: #0000006b;
-    height: 400px;
-    color: rgb(134, 2, 106);
-    top: 50%;
-    left: 50%;
-    position: absolute;
-    transform: translate(-50%, -50%);
-    box-sizing: border-box;
-    padding: 10px 40px;
+h1{padding: 5%;
+color: aliceblue;
+font-family: 'Open Sans', sans-serif;
 }
-
-.avatar {
-    width: 250px;
-    height: 250px;
-    border-radius: 50%;
-    position: absolute;
-    left: 60%;
-}
-
-h1{
-    margin: 0;
-    padding: 0;
-    font-size: 35px;
-}
-
-.loginbox p{
-    margin: 10px;
-    padding: 0px;
-    font-size: 20px;
-}
-
-.loginbox input {
-    width: 200px;
-    margin: 0px;
-    padding: 5px;
-    color: rgb(0, 0, 0);
-}
-
-.loginbox input[type = "text"], input[type = "password"]{
-    background-color: rgba(0, 0, 0, 0.356);
-    font-size: 15px;
-    color: white;
-}
-
-.loginbox input[type = "submit"]{
-    background-color: rgba(110, 31, 255, 0.267);
-    color: white;
-    font-size: 20px;
-    border-radius: 60px;
-}
-
-.loginbox input:hover[type = "submit"]{
-    color: #8c00fe;
-}
-
-.loginbox a:hover{
-    color: #8c00fe;
-}
-
-
-
-
-
 
 
 
