--- a/login.css
+++ b/login.css
@@ -1,3 +1,26 @@
+input.parsley-error,
+select.parsley-error,
+textarea.parsley-error {    
+    border-color:#bb1e1e;
+    box-shadow: none;
+    color: #bb1e1e;
+}
+
+input.parsley-error:focus,
+select.parsley-error:focus,
+textarea.parsley-error:focus {    
+    border-color:#bb1e1e;
+    color: #bb1e1e;
+    box-shadow:inset 0 1px 1px rgb(228, 19, 19),0 0 6px #ce8483
+}
+
+#formPrueba{
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+    align-items: center;
+}
+
 header{
     background-image: url(img/city.gif);
     background-size: 90%;
@@ -18,14 +41,23 @@ h1{
     padding: 5%;
     margin: 0%;
 }
+h2{
+    text-align: center;
+    padding: 5%;
+    margin: 0%;
+    color: black;
+}
+
 .btn-primary{
     color: rgb(255, 255, 255);
     background-color: blueviolet;
+    display: block;
+    float: left;
+   width: 200px;
 }
-.row{
-    padding: 1%;
-    margin: 0%;
-    font-family: 'Open Sans', sans-serif;
+.button{
+    color: rgb(255, 255, 255);
+    background-color: blueviolet;
 }
 #texto1 {text-align: center;
 margin: 5%;
