--- a/crear.css
+++ b/crear.css
@@ -38,3 +38,18 @@ h1{
     color: rgb(255, 255, 255);
     background-color: blueviolet;
 }
+#parsley-id-5{
+    color: #bb1e1e;
+}
+#parsley-id-7{
+    color: #bb1e1e;
+}
+#parsley-id-9{
+    color: #bb1e1e;
+}
+#parsley-id-11{
+    color: #bb1e1e;
+}
+#parsley-id-13{
+    color: #bb1e1e;
+}
