--- a/login.css
+++ b/login.css
@@ -68,3 +68,9 @@ h1{padding: 5%;
 color: aliceblue;
 font-family: 'Open Sans', sans-serif;
 }
+#parsley-id-5{
+    color: #bb1e1e;
+}
+#parsley-id-7{
+    color: #bb1e1e;
+}
