--- a/problema.css
+++ b/problema.css
@@ -21,3 +21,15 @@ h1{
 }
 .form-select{text-align: center;
 box-sizing: 20%;}
+.parsley-id-9{
+    color: #bb1e1e;
+}
+#parsley-id-5{
+    color: #bb1e1e;
+}
+#parsley-id-7{
+    color: #bb1e1e;
+}
+#parsley-id-9{
+    color: #bb1e1e;
+}
